# oneblog

./: .env  Cargo.toml
.github/workflows/: clippy.yaml
NiceAdmin/: charts-apexcharts.html  charts-chartjs.html  charts-echarts.html  components-accordion.html  components-alerts.html  components-badges.html  components-breadcrumbs.html  components-buttons.html  components-cards.html  components-carousel.html  components-list-group.html  components-modal.html  components-pagination.html  components-progress.html  components-spinners.html  components-tabs.html  components-tooltips.html  forms-editors.html  forms-elements.html  forms-layouts.html  forms-validation.html  icons-bootstrap.html  icons-boxicons.html  icons-remix.html  index.html  pages-blank.html  pages-contact.html  pages-faq.html  pages-login.html  pages-register.html  tables-data.html  tables-general.html  users-profile.html
migration/: Cargo.toml
migration/src/: lib.rs  m20230725_000001_create_category_table.rs  m20230725_000002_create_post_table.rs  m20230726_070550_create_user_table.rs
src/: database.rs  error.rs  launch.rs  lib.rs  main.rs  template_engine.rs  utils.rs
src/authentication/: mod.rs  password.rs
src/controller/: category.rs  mod.rs  post.rs  user.rs
src/entities/: category.rs  mod.rs  post.rs  prelude.rs  users.rs
src/route/: index.rs  login.rs  mod.rs
src/route/admin/: category.rs  index.rs  logout.rs  mod.rs  post.rs
src/route/config/: admin.rs  mod.rs  public.rs
src/view/: _footer.html  _head.html  _header.html  _script.html  _sidebar.html  index.html  login_form.html  post_id.html  posts_with_category.html  searched.html
src/view/admin/: _header.html  _sidebar.html  categories.html  categories_edit_form.html  categories_new_form.html  catgegories.html  edit_form.html  index.html  new_form.html
