[package]
name = "oneblog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
#members = [".", "api", "service", "entity", "migration"]
members = [".", "migration"]

[dependencies]
sea-orm = { version = "0.11.0", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }

