[package]
name = "oneblog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
#members = [".", "api", "service", "entity", "migration"]
members = [".", "migration"]

[dependencies]
actix-web = "4.3.1"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-web-lab = "0.18"
actix-files = "*"
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
anyhow = "1"
futures = "*"
sea-orm = { version = "0.12.0", features = [ "with-chrono", "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
tracing = "0.1"
chrono = "*"
handlebars = { version="4.3.7" , features=["dir_source", "script_helper"]}
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rand = { version = "0.8", features=["std_rng"] }
argon2 = { version = "0.4", features = ["std"] }
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.1.1"
#sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
sqlx = { version = "0.6", default-features = false, features = ["runtime-async-std-native-tls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
serde = "1.0.115"
serde_json = "1"
