[package]
name = "oneblog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration"]

[dependencies]
actix-web = "4.3.1"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-web-lab = "0.18"
actix-files = "0.6"
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
argon2 = { version = "0.5", features = ["std"] }
anyhow = "1"
chrono = "0.4"
futures = "0.3"
handlebars = { version="4.3.7" , features=["dir_source", "script_helper"]}
rand = { version = "0.8", features=["std_rng"] }
serde = "1.0.115"
secrecy = { version = "0.8", features = ["serde"] }
sea-orm = { version = "0.12.0", features = [ "with-chrono", "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
serde_json = "1"
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.1.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

#[patch.crates-io]
#actix-web-flash-messages= { path = "../actix-web-flash-messages/actix-web-flash-messages" }
